# statsctl

./: .git-workflow-version  CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md  versions.json
src/: correlation.rs  display.rs  main.rs  missing.rs  plot.rs  reader.rs  stats.rs  types.rs  utils.rs
tests/data/: sample.csv  sample_cleaned.csv
