[package]
name = "statsctl"
version = "0.1.0"
edition = "2021"
authors = ["Angel Samuel Suesca Ríos <suescapsam@gmail.com>"]
description = "Quick statistical analysis CLI for CSV/TSV data files"
license = "MIT"

[[bin]]
name = "statsctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.17"

[profile.release]
opt-level = 3
lto = true
